--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
             <TextView
+                android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -27,6 +28,13 @@
                 android:textSize="20sp" />
 
         </android.support.v7.widget.Toolbar>
+
+
+        <TextView
+            android:id="@+id/text"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
 
     </android.support.constraint.ConstraintLayout>
